objects/AcctSeed__Account_Tax__c.object
<CustomObject>
    <description>Used to document relationship between account and taxable product.</description>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_Taxes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Rate__c</fullName>
        <formula>AcctSeed__Tax_Rate__r.AcctSeed__Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Rate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product2.AcctSeed__Accounting_Type__c</field>
                <operation>equals</operation>
                <value>Tax Rate</value>
            </filterItems>
            <infoMessage>The product list is limited to those products with a Tax Type of &quot;Tax Rate&quot;.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Account_Taxes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Type__c</fullName>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <default>true</default>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tax</label>
    <nameField>
        <displayFormat>AT- {00000}</displayFormat>
        <label>Tax Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>